--- a/Resources/assets/scss/_page.scss
+++ b/Resources/assets/scss/_page.scss
@@ -138,6 +138,21 @@
         color: $light-red-ochre;
       }
     }
+
+
+    &.platform {
+      color: #cccccc;
+
+      &.active {
+        i.fa-android {
+          color: #A3C439;
+        }
+
+        i.fa-apple {
+          color: #666666;
+        }
+      }
+    }
   }
 
   .divider {
