--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -78,12 +78,16 @@
                     <li><a href="{{ path('pronto_mobile_devices') }}" {% if pronto_mobile.activeModule == 'devices' %}class="active"{% endif %}><span><i class="fa fa-tablet fa-lg" aria-hidden="true"></i></span><span>{{ 'devices'|trans|capitalize }}</span></a></li>
                 {% endif %}
 
+                {% if pronto_mobile.pluginIsActive('app_versions') %}
+                    <li><a href="{{ path('pronto_mobile_app_versions') }}" {% if pronto_mobile.activeModule == 'versions/app' %}class="active"{% endif %}><span><i class="fa fa-code-fork fa-lg" aria-hidden="true"></i></span><span>{{ 'app_versions'|trans|capitalize }}</span></a></li>
+                {% endif %}
+
                 {% if pronto_mobile.pluginIsActive('translations') %}
                     <li><a href="{{ path('pronto_mobile_translations') }}" {% if pronto_mobile.activeModule == 'translations' %}class="active"{% endif %}><span><i class="fa fa-language fa-lg" aria-hidden="true"></i></span><span>{{ 'translations'|trans|capitalize }}</span></a></li>
                 {% endif %}
 
-                {% if pronto_mobile.pluginIsActive('app_versions') %}
-                    <li><a href="{{ path('pronto_mobile_app_versions') }}" {% if pronto_mobile.activeModule == 'versions/app' %}class="active"{% endif %}><span><i class="fa fa-code-fork fa-lg" aria-hidden="true"></i></span><span>{{ 'app_versions'|trans|capitalize }}</span></a></li>
+                {% if pronto_mobile.pluginIsActive('remote_config') %}
+                    <li><a href="{{ path('pronto_mobile_remote_config') }}" {% if pronto_mobile.activeModule == 'remote_config' %}class="active"{% endif %}><span><i class="fa fa-cog fa-lg" aria-hidden="true"></i></span><span>{{ 'remote_config'|trans|capitalize }}</span></a></li>
                 {% endif %}
 
                 {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_SUPER_ADMIN') %}
